--- a/style.css
+++ b/style.css
@@ -8,20 +8,17 @@
 /* Style for grid items (cells) */
 .grid-item {
     padding: 100px 100px;
-    text-align: center;
     background-color: #4c78af;
-    color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 40px;
-    font-weight: 525;
-    transition: all 3s;
+    transition: all 1s;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
+.grid-item:hover{
+    background: rgb(175, 76, 84);
+}
 
 .body-contents {
     display: flex;
@@ -29,5 +26,21 @@
     justify-content: center;
     height: 100vh;
     margin: 0;
+}
+
+h1{
+    color: white;
+    font-size: 20px;
+    text-align: left;
+}
+
+h2{
+    color: white;
+    font-size: 15px;
+    text-align: left;
+}
+
+h3{
+    
 }
 
