--- a/style.css
+++ b/style.css
@@ -1,12 +1,90 @@
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #10131c;
+}
+
+.navigation{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    background: #212532;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+    transition-delay: .8s;
+}
+.navigation.active{
+    width: 200px;
+    height: 200px;
+    transition-delay: 0s;
+}
+
+.navigation span{
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    border-radius: 50%;
+    transform: translate(calc(12px * var(--x)), calc(12px * var(--y)));
+    transition: transform .5s, width .5s, height .5s, background .5s;
+    transition-delay: calc(.1s * var(--i));
+
+}
+.navigation.active span{
+    width: 60px;
+    height: 60px;
+    background: #333849;
+    transform: translate(calc(300px * var(--x)), calc(300px * var(--y)));
+}
+
+.navigation span ion-icon{
+    transition: .5s;
+    font-size: 0em;
+}
+
+.navigation.active span ion-icon{
+    font-size: 1.35em;
+    color: #fff;
+}
+.navigation.active span:hover ion-icon{
+    color: #2dfc52;
+    filter: drop-shadow(0 0 2px #2dfc52) 
+     drop-shadow(0 0 5px #2dfc52)
+     drop-shadow(0 0 15px #2dfc52);
+}
+
+
+
+
+
+
+
 /* Add some basic styling for the grid */
+/*
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Two columns with equal width */
-    grid-gap: 20px; /* Add some gap between grid items */
+    grid-template-columns: repeat(2, 1fr); /* Two columns with equal width
+    grid-gap: 20px; /* Add some gap between grid items 
 }
 
 /* Style for grid items (cells) */
-.grid-item {
+/* .grid-item {
     padding: 100px 100px;
     background-color: #4c78af;
     border: none;
@@ -42,5 +120,5 @@ h2{
 
 h3{
     
-}
+} */
 
